Home - Horizontal scroll issue

--- a/MvcWebRole1/Content/styles/mm.tags.css
+++ b/MvcWebRole1/Content/styles/mm.tags.css
@@ -3,7 +3,7 @@
     float: left;
     /*margin-left: 10px;*/
     width: 30%;
-    min-width: 300px;
+    min-width: 270px;
     min-height: 50px;
     background-color: #fff;
     border-radius: 5px;
